--- a/packages/SwingSet/package.json
+++ b/packages/SwingSet/package.json
@@ -48,8 +48,7 @@
     "anylogger": "^0.21.0",
     "import-meta-resolve": "^1.1.1",
     "node-lmdb": "^0.9.5",
-    "semver": "^6.3.0",
-    "ses": "^0.14.3"
+    "semver": "^6.3.0"
   },
   "files": [
     "bin/vat",
