--- a/packages/dapp-svelte-wallet/ui/package.json
+++ b/packages/dapp-svelte-wallet/ui/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@agoric/assert": "^0.3.14",
     "@agoric/captp": "^1.10.6",
+    "@agoric/install-ses": "^0.5.28",
     "@agoric/wallet-connection": "^0.1.1",
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
@@ -28,7 +29,6 @@
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^6.1.0",
-    "ses": "^0.14.3",
     "sirv-cli": "^1.0.0",
     "smelte": "^1.0.15",
     "svelte": "^3.0.0",
