--- a/packages/dapp-wallet/ui/package.json
+++ b/packages/dapp-wallet/ui/package.json
@@ -10,6 +10,7 @@
     "@agoric/assert": "^0.3.14",
     "@agoric/captp": "^1.10.6",
     "@agoric/eventual-send": "^0.13.30",
+    "@agoric/install-ses": "^0.5.28",
     "@agoric/notifier": "^0.3.31",
     "@agoric/ui-components": "^0.2.25",
     "@emotion/react": "^11.5.0",
@@ -39,8 +40,7 @@
     "react-dom": "^16.8.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
-    "rimraf": "^3.0.2",
-    "ses": "^0.14.3"
+    "rimraf": "^3.0.2"
   },
   "scripts": {
     "start": "yarn build:ses && react-scripts start",
