--- a/packages/pegasus/package.json
+++ b/packages/pegasus/package.json
@@ -36,6 +36,7 @@
     "@agoric/deploy-script-support": "^0.5.5",
     "@agoric/ertp": "^0.12.2",
     "@agoric/eventual-send": "^0.13.30",
+    "@agoric/install-ses": "^0.5.28",
     "@agoric/marshal": "^0.4.28",
     "@agoric/nat": "^4.1.0",
     "@agoric/notifier": "^0.3.31",
@@ -46,11 +47,9 @@
     "@agoric/zoe": "^0.20.0"
   },
   "devDependencies": {
-    "@agoric/install-ses": "^0.5.28",
     "ava": "^3.12.1",
     "c8": "^7.7.2",
-    "import-meta-resolve": "^1.1.1",
-    "ses": "^0.14.3"
+    "import-meta-resolve": "^1.1.1"
   },
   "files": [
     "bundles/",
