--- a/packages/treasury/package.json
+++ b/packages/treasury/package.json
@@ -51,8 +51,7 @@
     "@agoric/install-ses": "^0.5.28",
     "ava": "^3.12.1",
     "c8": "^7.7.2",
-    "import-meta-resolve": "^1.1.1",
-    "ses": "^0.14.3"
+    "import-meta-resolve": "^1.1.1"
   },
   "files": [
     "bundles/",
