--- a/packages/wallet-connection/package.json
+++ b/packages/wallet-connection/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@agoric/eventual-send": "^0.13.30",
+    "@agoric/install-ses": "^0.5.28",
     "@custom-elements-manifest/analyzer": "^0.4.17",
     "@lit-labs/react": "^1.0.1",
     "@open-wc/eslint-config": "^4.3.0",
@@ -43,8 +44,7 @@
     "eslint-plugin-wc": "^1.3.1",
     "lint-staged": "^10.5.4",
     "lit": "^2.0.2",
-    "mock-socket": "^9.0.4",
-    "ses": "^0.14.3"
+    "mock-socket": "^9.0.4"
   },
   "customElements": "custom-elements.json",
   "eslintConfig": {
