build(deps): remove obsolete dependencies

--- a/packages/bundle-source/package.json
+++ b/packages/bundle-source/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint '**/*.js'"
   },
   "devDependencies": {
-    "@agoric/install-ses": "^0.5.28",
+    "@agoric/lockdown": "^0.1.0",
     "@endo/ses-ava": "^0.2.8",
     "ava": "^3.12.1"
   },
