--- a/packages/marshal/package.json
+++ b/packages/marshal/package.json
@@ -40,8 +40,7 @@
     "@agoric/promise-kit": "^0.2.28"
   },
   "devDependencies": {
-    "@agoric/install-ses": "^0.5.28",
-    "@agoric/swingset-vat": "^0.23.0",
+    "@agoric/lockdown": "^0.1.0",
     "@endo/ses-ava": "^0.2.8",
     "ava": "^3.12.1",
     "c8": "^7.7.2"
