--- a/packages/solo/package.json
+++ b/packages/solo/package.json
@@ -45,6 +45,7 @@
     "@agoric/xsnap": "^0.10.0",
     "anylogger": "^0.21.0",
     "deterministic-json": "^1.0.5",
+    "esm": "agoric-labs/esm#Agoric-built",
     "express": "^4.17.1",
     "import-meta-resolve": "^1.1.1",
     "minimist": "^1.2.0",
